--- a/Contatos/Contatos/Contatos.csproj
+++ b/Contatos/Contatos/Contatos.csproj
@@ -52,16 +52,17 @@
       <DependentUpon>contatoDataSet.xsd</DependentUpon>
     </Compile>
     <Compile Include="DADOS.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Contatos.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Contatos.Designer.cs">
+      <DependentUpon>Contatos.cs</DependentUpon>
     </Compile>
+    <Compile Include="NEGOCIO.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Contatos.resx">
+      <DependentUpon>Contatos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
