--- a/Contatos/Contatos/Contatos.csproj
+++ b/Contatos/Contatos/Contatos.csproj
@@ -61,6 +61,12 @@
     <Compile Include="NEGOCIO.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Telefone.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Telefone.Designer.cs">
+      <DependentUpon>Telefone.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Contatos.resx">
       <DependentUpon>Contatos.cs</DependentUpon>
     </EmbeddedResource>
@@ -73,6 +79,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Telefone.resx">
+      <DependentUpon>Telefone.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="contatoDataSet.xsc">
       <DependentUpon>contatoDataSet.xsd</DependentUpon>
     </None>
